[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "walt_ts_dmim"
version = "0.1.0"
description = "Temporal sensitivity diagnostics wrapper for SALib"
requires-python = ">=3.10"
dependencies = [
    "salib @ git+https://github.com/SALib/SALib.git@main",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
packages = ["walt_ts_dmim"]